@@ -17,10 +17,12 @@
 	           tal:attributes="src string:${portal_url}/++resource++bulb.png" />
 	      <ol>
 	        <li tal:repeat="tour view/tours">
-	          <tal:loop define="tour_invalid python: view.validate_tour(tour)">
+	          <tal:loop define="tour_invalid python: view.validate_tour(tour);
+	          					next_tour_id python:view.next_tour_id(tour)">
 	            <a tal:condition="not:tour_invalid"
 	               tal:attributes="href tour/url;
-	                               class python:tour_invalid and 'tour_inactive' or ''"
+	                               class python:tour_invalid and 'tour_inactive' or '';
+	                               onclick string:set_cookie('$next_tour_id')"
 	               tal:content="tour/title" />
 	            <span tal:condition="tour_invalid"
 	                  tal:attributes="title python:tour_invalid[0]"
