@@ -5,11 +5,14 @@
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:plone="http://namespaces.plone.org/plone"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     i18n_domain="collective.amberjack.portlet">
 
   <i18n:registerTranslations directory="locales" />
 
   <five:registerPackage package="." initialize=".initialize" />
+  
+  <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
 
   <genericsetup:registerProfile
       name="default"
@@ -32,9 +35,5 @@
       addview=".amberjackchoiceportlet.AddForm"
       editview=".amberjackchoiceportlet.EditForm"
       />
-
-  <browser:resource name="bulb.png" file="bulb.png" />
-  <browser:resource name="error.png" file="error.png" />
-  <browser:resource name="completed_tour.gif" file="completed_tour.gif" />
 
 </configure>
