@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+ 
+ <javascript cacheable="True" compression="safe" cookable="True"
+    enabled="True" expression="" id="manage_cookie.js" inline="False"/>
+</object>
