@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<object name="portal_skins" allow_any="False" cookie_persistence="False">
+	        
+ <object name="collective_amberjack_portlet_javascripts"
+    meta_type="Filesystem Directory View"
+    directory="collective.amberjack.portlet:skins/collective_amberjack_portlet_javascripts"/>
+ <object name="collective_amberjack_portlet_images"
+    meta_type="Filesystem Directory View"
+    directory="collective.amberjack.portlet:skins/collective_amberjack_portlet_images"/>
+
+ <skin-path name="*">
+  <layer name="collective_amberjack_portlet_javascripts"
+     insert-after="custom"/>
+  <layer name="collective_amberjack_portlet_images"
+     insert-after="custom"/>
+ </skin-path>
+
+</object>
